Removed useless logging information in KeyManager. Updated i18n for some strings

--- a/src/main/resources/locale/strings.properties
+++ b/src/main/resources/locale/strings.properties
@@ -1,23 +1,26 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-nombre_juego=VIRUS BUSTERS
+
+app_name=VIRUS BUSTERS
+key_not_found=Message not defined
+
 #menu_state
-iniciar=Start
-ayuda=Help
-salir=Exit
+menu_start=Start
+menu_help=Help
+menu_score=Score
+menu_settings=Settings
+menu_exit=Exit
+
 #scores
 regresar=Return
 nombre=Name
-puntaje=Score
 #settings
-settings=Settings
 lenguaje=Language
 music=Music
 sfx=SFX
 jugador=Player
 guardar=Save
-salir=Exit
 encendido=ON
 apagado=OFF
 #Pausa
