--- a/src/main/resources/locale/strings_en.properties
+++ b/src/main/resources/locale/strings_en.properties
@@ -1,23 +1,16 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-nombre_juego=VIRUS BUSTERS
 #menu_state
-iniciar=Start
-ayuda=Help
-salir=Exit
 #scores
 regresar=Return
 nombre=Name
-puntaje=Score
 #settings
-settings=Settings
 lenguaje=Language
 music=Music
 sfx=SFX
 jugador=Player
 guardar=Save
-salir=Exit
 encendido=ON
 apagado=OFF
 #Pausa
@@ -39,3 +32,10 @@ shoot=Shot
 run=Run
 pause=Pause
 moving=Move
+app_name=VIRUS BUSTER
+menu_start=Start
+menu_help=Help
+menu_exit=Exit
+menu_score=Score
+menu_settings=Settings
+key_not_found=Message not defined
