--- a/src/main/resources/locale/strings_es.properties
+++ b/src/main/resources/locale/strings_es.properties
@@ -1,23 +1,16 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-nombre_juego=VIRUS BUSTERS
 #menu_state
-iniciar=Iniciar
-ayuda=Ayuda
-salir=Salir
 #scores
 regresar=Atras
 nombre=Nombre
-puntaje=Puntaje
 #settings
-settings=Ajustes
 lenguaje=Lenguaje
 music=Musica
 sfx=SFX
 jugador=Jugador
 guardar=Guardar
-salir=Salir
 encendido=SI
 apagado=NO
 #Pausa
@@ -39,3 +32,10 @@ shoot=Disparar
 run=Correr
 pause=Pausa
 moving=Moverse
+app_name=VIRUS BUSTER
+menu_start=Iniciar
+menu_help=Ayuda
+menu_exit=Salir
+menu_score=Puntajes
+menu_settings=Ajustes
+key_not_found=Mensaje no definido
