Added HelpState. Updated some i18n strings Load app name from LanguageManager.

--- a/src/main/resources/locale/strings.properties
+++ b/src/main/resources/locale/strings.properties
@@ -12,6 +12,12 @@ menu_score=Score
 menu_settings=Settings
 menu_exit=Exit
 
+help_attack=Attack
+help_run=Run
+help_pause=Pause
+help_move=Move
+help_exit=Exit
+
 #scores
 regresar=Return
 nombre=Name
