--- a/src/main/resources/locale/strings_en.properties
+++ b/src/main/resources/locale/strings_en.properties
@@ -39,3 +39,8 @@ menu_exit=Exit
 menu_score=Score
 menu_settings=Settings
 key_not_found=Message not defined
+help_attack=Attack
+help_run=Run
+help_pause=Pause
+help_move=Move
+help_exit=Exit
