--- a/src/main/resources/locale/strings_es.properties
+++ b/src/main/resources/locale/strings_es.properties
@@ -39,3 +39,8 @@ menu_exit=Salir
 menu_score=Puntajes
 menu_settings=Ajustes
 key_not_found=Mensaje no definido
+help_attack=Atacar
+help_run=Correr
+help_pause=Pausa
+help_move=Mover
+help_exit=Salir
