Added score state.

--- a/src/main/resources/locale/strings.properties
+++ b/src/main/resources/locale/strings.properties
@@ -5,46 +5,21 @@
 app_name=VIRUS BUSTERS
 key_not_found=Message not defined
 
-#menu_state
+# Menu state
 menu_start=Start
 menu_help=Help
+menu_exit=Exit
 menu_score=Score
 menu_settings=Settings
-menu_exit=Exit
 
+# Help state
 help_attack=Attack
 help_run=Run
 help_pause=Pause
 help_move=Move
 help_exit=Exit
 
-#scores
-regresar=Return
-nombre=Name
-#settings
-lenguaje=Language
-music=Music
-sfx=SFX
-jugador=Player
-guardar=Save
-encendido=ON
-apagado=OFF
-#Pausa
-continue=Continue
-restart=Restart
-#continue
-askcontinue=Continue?
-yes=yes
-#win
-win=WINNER
-save=Save
-cancel=Cancel
-name=Name: 
-fail=Failed
-fail_message=You have no coins :V
-#help
-help=Help
-shoot=Shot
-run=Run
-pause=Pause
-moving=Move
+# Score state
+scores_title_name=Name
+scores_title_score=Score
+scores_option_back=Back
