--- a/src/main/resources/locale/strings_en.properties
+++ b/src/main/resources/locale/strings_en.properties
@@ -1,46 +1,25 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-#menu_state
-#scores
-regresar=Return
-nombre=Name
-#settings
-lenguaje=Language
-music=Music
-sfx=SFX
-jugador=Player
-guardar=Save
-encendido=ON
-apagado=OFF
-#Pausa
-continue=Continue
-restart=Restart
-#continue
-askcontinue=Continue?
-yes=yes
-#win
-win=WINNER
-save=Save
-cancel=Cancel
-name=Name: 
-fail=Failed
-fail_message=You have no coins :V
-#help
-help=Help
-shoot=Shot
-run=Run
-pause=Pause
-moving=Move
-app_name=VIRUS BUSTER
+
+app_name=VIRUS BUSTERS
+key_not_found=Message not defined
+
+# Menu state
 menu_start=Start
 menu_help=Help
 menu_exit=Exit
 menu_score=Score
 menu_settings=Settings
-key_not_found=Message not defined
+
+# Help state
 help_attack=Attack
 help_run=Run
 help_pause=Pause
 help_move=Move
 help_exit=Exit
+
+# Score state
+scores_title_name=Name
+scores_title_score=Score
+scores_option_back=Back
