--- a/src/main/resources/locale/strings_es.properties
+++ b/src/main/resources/locale/strings_es.properties
@@ -1,46 +1,25 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-#menu_state
-#scores
-regresar=Atras
-nombre=Nombre
-#settings
-lenguaje=Lenguaje
-music=Musica
-sfx=SFX
-jugador=Jugador
-guardar=Guardar
-encendido=SI
-apagado=NO
-#Pausa
-continue=Continuar
-restart=Reiniciar
-#continue
-askcontinue=\u00bfContinuar?
-yes=S\u00ed
-#win
-win=GANADOR
-save=Guardar
-cancel=Cancelar
-name=Nombre: 
-fail=Fallido
-fail_message=No tiene monedas :V
-#help
-help=Ayuda
-shoot=Disparar
-run=Correr
-pause=Pausa
-moving=Moverse
+
 app_name=VIRUS BUSTER
+key_not_found=Mensaje no definido
+
+# Menu state
 menu_start=Iniciar
 menu_help=Ayuda
 menu_exit=Salir
 menu_score=Puntajes
 menu_settings=Ajustes
-key_not_found=Mensaje no definido
+
+# Help state
 help_attack=Atacar
 help_run=Correr
 help_pause=Pausa
 help_move=Mover
 help_exit=Salir
+
+# Score state
+scores_title_name=Nombre
+scores_title_score=Puntos
+scores_option_back=Regresar
